# universal-live-share-client-dbg

./: Cargo.toml  README.md  build.rs
src/: logger.rs  main.rs  shell.rs
src/rpc/: live_share.rs  traits.rs
src/shell/: commands.rs
src/shell/commands/: initialize.rs  ping.rs  say_hello.rs  version.rs
