[package]
name = "universal-live-share-client-dbg"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.80"
clap = { version = "4.5.2", features = ["derive"] }
jsonrpsee = { version = "0.22.2", features = ["client", "ws-client", "macros"] }
rustyline = "13.0.0"
shellfish = { version = "0.9.0", features = ["app", "async-std", "async", "tokio"] }
tokio = { version = "1.36.0", features = ["full"] }
