[package]
name = "universal-live-share-client-dbg"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.80"
clap = { version = "4.5.2", features = ["derive"] }
env_logger = "0.11.3"
log = "0.4.21"
prost = "0.12.3"
rustyline = "13.0.0"
shellfish = { version = "0.9.0", features = ["app", "async-std", "async", "tokio"] }
tokio = { version = "1.36.0", features = ["full"] }
tonic = "0.11.0"

[build-dependencies]
tonic-build = "0.11.0"
